--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.container {
+.board {
   display: flex;
   flex-wrap: wrap;
   height: 300px;
@@ -11,4 +11,34 @@
   border: 1px solid black;
   width: 25%;
   height: 30%;
+  justify-content: center;
+  font-size: 5rem;
+  cursor: pointer;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.btnContainer {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.resetBtn {
+  width: 5rem;
+  height: 2.5rem;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.5s;
+  background-color: rgb(172, 87, 228);
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.resetBtn:hover {
+  background-color: rgb(215, 156, 255);
 }
